--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul id="menu">
           <li class="current"><a href="index.html">Home</a></li>
           <li><a href="ourwork.html">Our Work</a></li>
-          <li><a href="testimonials.html">Motto</a></li>
+          <li><a href="testimonials.html">Motto and aim</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div><!--end menubar-->
@@ -112,13 +112,13 @@
             <li>
               <a class="thumb" href="images/1.jpg"><img src="images/1_thumb.jpg" alt="one" /></a>
               <div class="caption">
-                <div class="image-title portfolio_two">A picture of an office building</div>
+                <div class="image-title portfolio_two">A picture of an apartment building</div>
               </div>
             </li>
             <li>
               <a class="thumb" href="images/2.jpg"><img src="images/2_thumb.jpg" alt="two" /></a>
               <div class="caption">
-                <div class="image-title portfolio_two">Another picture of an office building</div>
+                <div class="image-title portfolio_two">Another picture of an apartment</div>
               </div>
             </li>
             <li>
@@ -241,7 +241,7 @@
 	  </div><!--close footer_container_box1-->      
 	  <br style="clear:both"/>
 	  <br />
-    <a href="http://fotogrph.com/">Images</a> | website by E-WAY
+    <a href="http://fotogrph.com/">Images</a> | website by E-WAY solutions
     </div><!--close footer_container--> 
   </div><!--close footer-->  
   
