--- a/ourwork.html
+++ b/ourwork.html
@@ -33,7 +33,7 @@
 	
       <div id="text_content">
         <h2>Our Work</h2>
-        <p>We provide the feasible mode of transportation from any location in the world with the mere click of a button. We provide 2 filters, "fastest" and "cheapest" and according to the user's choice,the mode of tranportation will be shown. We have designed our application in such a way that it can be easily accessed by any age group .</p>
+        <p>  Here in this E-WAY we provide safe and efficient mode of transporttion from one location to another.Here we compare the safest,cheapest and fastest route from one location to another by means of train,bus,flight and any other mode of transportation.This provides a tangible ecnomic way for a person to travel between two locations.This E-way app provides every travelling individual to travel from one place to another place without any need for lag,and efficient money.This provides a great change in the transportation from one place to another to bring a revolutionary change in the way we travel  </p>
         <p>It can prove equally  useful for tourists as well as local residents for commutting from one place to another. Our services are available uninterrupted throughout the globe</p>     
 	  </div><!--close text_content-->	
 	
@@ -48,7 +48,7 @@
     <div id="footer_container">
 	  <div class="footer_container_box">
 		<h4>AIM</h4>
-	    <p>  "Providing efficient modes of commuting globally"</p>
+	    <p>  "Providing efficient,faster modes of commuting globally"</p>
 		  <a href="ourwork.html">Read more</a>
 	  </div><!--close footer_container_box-->
       <div class="footer_container_box">
